- oidc finalize and test-cases